fix filter visibility on map page

--- a/src/components/Map/styles.scss
+++ b/src/components/Map/styles.scss
@@ -76,7 +76,7 @@
 
 .filter {
   position: absolute;
-  top: 12px;
+  top: 65px;
   left: 5px;
   display: flex;
 }
@@ -149,7 +149,7 @@
     display: none;
   }
   .restoreMapZoomBtn {
-    top: 15px;
+    top: 65px;
     right: 280px;
   }
 }
